k8s/backend.yaml
###############################
# Feedback Backend Deployment
###############################
apiVersion: apps/v1
kind: Deployment

metadata:
  name: feedback-backend
  namespace: feedback

spec:
  replicas: 1
  revisionHistoryLimit: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: feedback-backend

  template:
    metadata:
      labels:
        app: feedback-backend

    spec:
      terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      

      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: feedback-backend

          image: 925963414980.dkr.ecr.ap-south-1.amazonaws.com/feedback/backend:effec023a9e7ab117ec244bcfb3a6cb609a66654
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8088
              protocol: TCP

          resources:
            requests:
              cpu: "300m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          lifecycle:
            preStop:
              exec:
                command:
                  - sh
                  - -c
                  - "sleep 5"

          readinessProbe:
            httpGet:
              path: /api/health
              port: 8088
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 8088
            initialDelaySeconds: 50
            periodSeconds: 10

---
###############################
# Feedback Backend Service
###############################
apiVersion: v1
kind: Service

metadata:
  name: feedback-backend-service
  namespace: feedback

spec:
  selector:
    app: feedback-backend

  ports:
    - port: 80
      targetPort: 8088
      protocol: TCP
  type: ClusterIP
---
###############################
# Feedback Backend Ingress
###############################

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: feedbackapi-strip-prefix
  namespace: feedback
spec:
  stripPrefix:
    prefixes:
      - /feedbackapi
---

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: feedback-backend-ingress
  namespace: feedback
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: feedback-feedbackapi-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik

  rules:
    - host: uat.svkm.ac.in
      http:
        paths:
          - path: /feedbackapi
            pathType: Prefix
            backend:
              service:
                name: feedback-backend-service
                port:
                  number: 80
